src/objects/Enquiry__c.object
<CustomObject>
    <fields>
        <fullName>Apartment_Name__c</fullName>
        <label>Apartment Name</label>
        <referenceTo>Apartment__c</referenceTo>
        <relationshipLabel>Enquires</relationshipLabel>
        <relationshipName>Enquires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_given__c</fullName>
        <formula>Apartment_Name__r.Discount_given__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount given</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Do_have_loan__c</fullName>
        <label>Do have loan on own house ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_number__c</fullName>
        <label>Floor number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Have_own_house__c</fullName>
        <label>Have own house?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kind_of_Penthouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kind of Penthouse</label>
        <referenceTo>Penthouse__c</referenceTo>
        <relationshipLabel>Enquires</relationshipLabel>
        <relationshipName>Enquires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kind_of_flat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kind of flat</label>
        <referenceTo>Flat__c</referenceTo>
        <relationshipLabel>Enquires</relationshipLabel>
        <relationshipName>Enquires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>IF( RecordType.Name == &quot;Flat&quot;, Kind_of_flat__r.Price_of_flat__c , Kind_of_Penthouse__r.Price_of_flat__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reason_for_lost__c</fullName>
        <label>Reason for lost</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Not satisfied with price</fullName>
                </value>
                <value>
                    <fullName>Changed their mind in buying</fullName>
                </value>
                <value>
                    <fullName>Not satisfied with construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_per_annum__c</fullName>
        <label>Salary per annum</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_person_Contacting__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales person (Contacting)</label>
        <referenceTo>Sales_person__c</referenceTo>
        <relationshipLabel>Enquires</relationshipLabel>
        <relationshipName>Enquires</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stages__c</fullName>
        <label>Stages</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enquiry</fullName>
                </value>
                <value>
                    <fullName>Visit to the site</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_cost_with_discount__c</fullName>
        <formula>Total_cost_without_discount__c -  Apartment_Name__r.Discount_given__c * Total_cost_without_discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total cost with discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_without_discount__c</fullName>
        <formula>IF( RecordType.Name == &quot;Flat&quot;, Price__c +  (    Kind_of_flat__r.Square_feet__c *25* Floor_number__c ), Price__c +(  Kind_of_Penthouse__r.Sq_ft_for_penthouse__c  *25* Floor_number__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total cost without discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>When_plan_to_buy__c</fullName>
        <label>When plan to buy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before 6 months</fullName>
                </value>
                <value>
                    <fullName>Within 6 months to 1 year</fullName>
                </value>
                <value>
                    <fullName>Within 1 - 2 year</fullName>
                </value>
                <value>
                    <fullName>More than 2 year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enquiry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enquirer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enquires</pluralLabel>
    <recordTypes>
        <fullName>Flat</fullName>
        <active>true</active>
        <description>Flats can be of different square foot and with varying number of bedrooms</description>
        <label>Flat</label>
    </recordTypes>
    <recordTypes>
        <fullName>Penthouse</fullName>
        <active>true</active>
        <description>Penthouses come with amenities like Wooden flooring, False ceiling, French windows</description>
        <label>Penthouse</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Floor_number</fullName>
        <active>true</active>
        <errorConditionFormula>Floor_number__c  &gt;=  Apartment_Name__r.Number_of_floors__c</errorConditionFormula>
        <errorMessage>Verify the total number of floors</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Salary</fullName>
        <active>true</active>
        <errorConditionFormula>Salary_per_annum__c  &lt; 3000000</errorConditionFormula>
        <errorMessage>Salary must need to be greater or equal to 30L</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stages_is_complesory</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Stages__c , &quot;&quot;)</errorConditionFormula>
        <errorMessage>knidly enter the valid stages</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>floor_number_need_to_match_apartment</fullName>
        <active>true</active>
        <errorConditionFormula>Floor_number__c  &gt; Apartment_Name__r.Number_of_floors__c</errorConditionFormula>
        <errorMessage>No such floor available, check apartment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>have_own_house_enter_loan</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Have_own_house__c , &quot;Yes&quot;) &amp;&amp;  ISBLANK(  IF(ISPICKVAL( Do_have_loan__c , &quot;Yes&quot;),&quot;True&quot;,&quot;False&quot;) )</errorConditionFormula>
        <errorMessage>If have own house, then kindly enter the loan details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>if_own_house_enter_current_address</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Have_own_house__c , &quot;Yes&quot;) &amp;&amp;  ISBLANK( Current_Address__c )</errorConditionFormula>
        <errorMessage>If ypou have own house, kindly enter current address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>minimum_amount_for_penthouse</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.Name ==&quot;Penthouse&quot; &amp;&amp; Total_cost_with_discount__c &gt;60000000</errorConditionFormula>
        <errorMessage>Maximum amount for penthouse is 6C</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>stages_is_lost_reason_must</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Stages__c , &quot;Lost&quot;) &amp;&amp;  ISBLANK( Reason_for_lost__c )</errorConditionFormula>
        <errorMessage>If the enquiry is lost, then kindly select the reason.</errorMessage>
    </validationRules>
</CustomObject>